[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/GameOverButtons.gd" type="Script" id=1]
[ext_resource path="res://Sprites/StartScreen/ButtonSairNormal.png" type="Texture" id=2]
[ext_resource path="res://Sprites/StartScreen/ButtonSairClickedl.png" type="Texture" id=3]
[ext_resource path="res://Sprites/StartScreen/JogarDeNovoCLicked.png" type="Texture" id=4]
[ext_resource path="res://Sprites/StartScreen/JogarDeNovoNormal.png" type="Texture" id=5]
[ext_resource path="res://Sprites/StartScreen/Ganhou.png" type="Texture" id=6]
[ext_resource path="res://Sprites/StartScreen/VoltarAoMenuClicked.png" type="Texture" id=7]
[ext_resource path="res://Sprites/StartScreen/VoltarAoMenuNormal.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Vit.png" type="Texture" id=9]
[ext_resource path="res://Sounds/RockSlide.wav" type="AudioStream" id=10]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Vit" type="Sprite" parent="."]
position = Vector2( 507, 291 )
scale = Vector2( 1.27625, 1.19333 )
texture = ExtResource( 9 )

[node name="TryAgain" type="TextureButton" parent="."]
margin_left = 375.0
margin_top = 322.0
margin_right = 655.0
margin_bottom = 397.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 5 )

[node name="VoltarAoMenu" type="TextureButton" parent="."]
margin_left = 375.0
margin_top = 403.0
margin_right = 655.0
margin_bottom = 478.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 7 )
texture_focused = ExtResource( 8 )

[node name="QUIT" type="TextureButton" parent="."]
margin_left = 374.0
margin_top = 484.0
margin_right = 654.0
margin_bottom = 559.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 2 )

[node name="GameOver" type="Sprite" parent="."]
position = Vector2( 524, 112 )
texture = ExtResource( 6 )

[node name="SlideSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 333, 376 )
stream = ExtResource( 10 )

[connection signal="mouse_entered" from="TryAgain" to="." method="_on_TryAgain_mouse_entered"]
[connection signal="pressed" from="TryAgain" to="." method="_on_TryAgain_pressed"]
[connection signal="mouse_entered" from="VoltarAoMenu" to="." method="_on_VoltarAoMenu_mouse_entered"]
[connection signal="pressed" from="VoltarAoMenu" to="." method="_on_VoltarAoMenu_pressed"]
[connection signal="mouse_entered" from="QUIT" to="." method="_on_QUIT_mouse_entered"]
[connection signal="pressed" from="QUIT" to="." method="_on_QUIT_pressed"]
